--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Landing-page</title>
 </head>
 <body>
-    
+    <div class="header">
+        <img src="images/" alt="Header logo of company">
+        <ul class="header-links">
+            <a href="">header link one</a>
+            <a href="">header link two</a>
+            <a href="">header link three</a>
+        </ul>
+    </div>
 </body>
 </html>
