--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Landing-page</title>
 </head>
 <body>
+    <!-- Wrapper will be added later on to use flexbox on full page -->
+
     <div class="header">
         <img src="images/" alt="Header logo of company">
         <ul class="header-links">
@@ -14,5 +16,23 @@
             <a href="">header link three</a>
         </ul>
     </div>
+
+    <!-- Content blocks devided in 4 pieces:
+
+     First-layer: first layer below header. Left side contains big a h1,
+     followed by smaller text and a button. Right side contains an image 
+
+     Second-layer: Some random information title, followed by 4 equally devided images,
+     that each have a subtext
+
+     Third-layer: Contains an inspiring quote, centralised
+
+     Fourth-Layer: Call to action, message to sign up on the left side 
+     with a button on the right side
+
+     Footer: simple footer containing copyright
+
+    -->
+
 </body>
 </html>
