--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Landing-page</title>
 </head>
 <body>
     <!-- Wrapper will be added later on to use flexbox on full page -->
 
     <div class="header">
-        <img src="images/" alt="Header logo of company">
+        <img src="./images/" alt="Header logo of company">
         <ul class="header-links">
             <a href="">header link one</a>
             <a href="">header link two</a>
@@ -17,22 +18,55 @@
         </ul>
     </div>
 
-    <!-- Content blocks devided in 4 pieces:
+    <!-- Content blocks devided in 4 pieces: -->
 
-     First-layer: first layer below header. Left side contains big a h1,
-     followed by smaller text and a button. Right side contains an image 
+     <!-- first-layer: first layer below header. Left side contains big a h1,
+     followed by smaller text and a button. Right side contains an image -->
+    <div class="first-layer">
+        <h1>This website is awesome</h1>
+        <sub>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</sub>
+        <img src="./images/" alt="this is a placeholder for an image">
+    </div>
 
-     Second-layer: Some random information title, followed by 4 equally devided images,
-     that each have a subtext
+     <!-- second-layer: Some random information title, followed by 4 equally devided images,
+     that each have a subtext -->
 
-     Third-layer: Contains an inspiring quote, centralised
+    <div class=second-layer"">
+        <h2>Some random information.</h2>
 
-     Fourth-Layer: Call to action, message to sign up on the left side 
-     with a button on the right side
+        <img src="./images/" alt="SL-image 1">
+        <sub>this is some subtext under an illustration or image</sub>
 
-     Footer: simple footer containing copyright
 
-    -->
+        <img src="./images/" alt="SL-image 2">
+        <sub>this is some subtext under an illustration or image</sub>
 
+
+        <img src="./images/" alt="SL-image 3">
+        <sub>this is some subtext under an illustration or image</sub>
+
+
+        <img src="./images/" alt="SL-image 4">
+        <sub>this is some subtext under an illustration or image</sub>
+    </div>
+
+     <!--third-layer: Contains an inspiring quote, centralised -->
+    <div class="third-layer">
+        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</p>
+        <p>-Thor, God of Thunder</p>
+    </div>
+
+     <!-- fourth-layer: Call to action, message to sign up on the left side 
+     with a button on the right side -->
+    <div class="fourth-layer">
+        <h3>Call to action! It's time!</h3>
+        <sub>Sign up four our product by clicking that button right over there!</sub>
+        <button>Sign up</button>
+    </div>
+
+     <!-- footer: simple footer containing copyright -->
+    <div class="footer">
+        copyright © The odin Project 2021
+    </div>
 </body>
 </html>
