Adding custom font Roboto
using relational link in HTML, set as baseline in style.css as well

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Wrapper will be added later on to use flexbox on full page -->
 
     <div class="header">
-        <img src="./images/" alt="Header logo of company">
+        <img src="./images/header_logo.png" alt="Header logo of company">
         <ul class="header-links">
             <a href="">header link one</a>
             <a href="">header link two</a>
