--- a/index.html
+++ b/index.html
@@ -4,13 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
+
+
+    <!-- inbedded code for use of Roboto font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
     <title>Landing-page</title>
+
 </head>
 <body>
     <!-- Wrapper will be added later on to use flexbox on full page -->
 
-    <div class="header">
+    <div class="header dark_background">
         <img src="./images/header_logo.png" alt="Header logo of company">
+        <div class="pushblock"></div>
         <ul class="header-links">
             <a href="">header link one</a>
             <a href="">header link two</a>
