--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="header dark_background">
         <img src="./images/header_logo.png" alt="Header logo of company">
         <div class="pushblock"></div>
-        <ul class="header-links">
+        <ul class="header-links hero_secondary">
             <a href="">header link one</a>
             <a href="">header link two</a>
             <a href="">header link three</a>
@@ -31,9 +31,9 @@
 
      <!-- first-layer: first layer below header. Left side contains big a h1,
      followed by smaller text and a button. Right side contains an image -->
-    <div class="first-layer">
-        <h1>This website is awesome</h1>
-        <sub>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</sub>
+    <div class="first-layer dark_background">
+        <h1 class="hero_main">This website is awesome</h1>
+        <sub class="hero_secondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</sub>
         <img src="./images/" alt="this is a placeholder for an image">
     </div>
 
@@ -41,7 +41,7 @@
      that each have a subtext -->
 
     <div class=second-layer"">
-        <h2>Some random information.</h2>
+        <h2 class="information_header_text">Some random information.</h2>
 
         <img src="./images/" alt="SL-image 1">
         <sub>this is some subtext under an illustration or image</sub>
@@ -60,22 +60,22 @@
     </div>
 
      <!--third-layer: Contains an inspiring quote, centralised -->
-    <div class="third-layer">
-        <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</p>
-        <p>-Thor, God of Thunder</p>
+    <div class="third-layer quote_background">
+        <p class="quote_text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</p>
+        <p class="quote_text">-Thor, God of Thunder</p>
     </div>
 
      <!-- fourth-layer: Call to action, message to sign up on the left side 
      with a button on the right side -->
     <div class="fourth-layer">
-        <h3>Call to action! It's time!</h3>
+        <h3 class="call_to_action_color">Call to action! It's time!</h3>
         <sub>Sign up four our product by clicking that button right over there!</sub>
-        <button>Sign up</button>
+        <button class="call_to_action_color">Sign up</button>
     </div>
 
      <!-- footer: simple footer containing copyright -->
-    <div class="footer">
-        copyright © The odin Project 2021
+    <div class="footer dark_background hero_secondary">
+        Copyright © The odin Project 2021
     </div>
 </body>
 </html>
