--- a/index.html
+++ b/index.html
@@ -15,67 +15,69 @@
 
 </head>
 <body>
-    <!-- Wrapper will be added later on to use flexbox on full page -->
+    <div class="wrapper">
+        <div class="header dark_background">
+            <img src="./images/header_logo.png" alt="Header logo of company">
+            <div class="pushblock"></div>
+            <ul class="header-links hero_secondary">
+                <a href="">header link one</a>
+                <a href="">header link two</a>
+                <a href="">header link three</a>
+            </ul>
+        </div>
 
-    <div class="header dark_background">
-        <img src="./images/header_logo.png" alt="Header logo of company">
-        <div class="pushblock"></div>
-        <ul class="header-links hero_secondary">
-            <a href="">header link one</a>
-            <a href="">header link two</a>
-            <a href="">header link three</a>
-        </ul>
-    </div>
+        <!-- Content blocks devided in 4 pieces: -->
 
-    <!-- Content blocks devided in 4 pieces: -->
+        <!-- first-layer: first layer below header. Left side contains big a h1,
+        followed by smaller text and a button. Right side contains an image -->
+        <div class="first-layer dark_background">
+            <div class="container">
+                <h1 class="hero_main">This website is awesome</h1>
+                <sub class="hero_secondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</sub>
+            </div>
+            <img src="./images/canyon.jpg" alt="picture of canyon in grey">
+        </div>
 
-     <!-- first-layer: first layer below header. Left side contains big a h1,
-     followed by smaller text and a button. Right side contains an image -->
-    <div class="first-layer dark_background">
-        <h1 class="hero_main">This website is awesome</h1>
-        <sub class="hero_secondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</sub>
-        <img src="./images/" alt="this is a placeholder for an image">
-    </div>
+        <!-- second-layer: Some random information title, followed by 4 equally devided images,
+        that each have a subtext -->
 
-     <!-- second-layer: Some random information title, followed by 4 equally devided images,
-     that each have a subtext -->
+        <div class=second-layer"">
+            <h2 class="information_header_text">Some random information.</h2>
 
-    <div class=second-layer"">
-        <h2 class="information_header_text">Some random information.</h2>
-
-        <img src="./images/" alt="SL-image 1">
-        <sub>this is some subtext under an illustration or image</sub>
-
-
-        <img src="./images/" alt="SL-image 2">
-        <sub>this is some subtext under an illustration or image</sub>
+            <img src="./images/" alt="SL-image 1">
+            <sub>this is some subtext under an illustration or image</sub>
 
 
-        <img src="./images/" alt="SL-image 3">
-        <sub>this is some subtext under an illustration or image</sub>
+            <img src="./images/" alt="SL-image 2">
+            <sub>this is some subtext under an illustration or image</sub>
 
 
-        <img src="./images/" alt="SL-image 4">
-        <sub>this is some subtext under an illustration or image</sub>
-    </div>
+            <img src="./images/" alt="SL-image 3">
+            <sub>this is some subtext under an illustration or image</sub>
 
-     <!--third-layer: Contains an inspiring quote, centralised -->
-    <div class="third-layer quote_background">
-        <p class="quote_text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</p>
-        <p class="quote_text">-Thor, God of Thunder</p>
-    </div>
 
-     <!-- fourth-layer: Call to action, message to sign up on the left side 
-     with a button on the right side -->
-    <div class="fourth-layer">
-        <h3 class="call_to_action_color">Call to action! It's time!</h3>
-        <sub>Sign up four our product by clicking that button right over there!</sub>
-        <button class="call_to_action_color">Sign up</button>
-    </div>
+            <img src="./images/" alt="SL-image 4">
+            <sub>this is some subtext under an illustration or image</sub>
+        </div>
 
-     <!-- footer: simple footer containing copyright -->
-    <div class="footer dark_background hero_secondary">
-        Copyright © The odin Project 2021
+        <!--third-layer: Contains an inspiring quote, centralised -->
+        <div class="third-layer quote_background">
+            <p class="quote_text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</p>
+            <p class="quote_text">-Thor, God of Thunder</p>
+        </div>
+
+        <!-- fourth-layer: Call to action, message to sign up on the left side 
+        with a button on the right side -->
+        <div class="fourth-layer">
+            <h3 class="call_to_action_color">Call to action! It's time!</h3>
+            <sub>Sign up four our product by clicking that button right over there!</sub>
+            <button class="call_to_action_color">Sign up</button>
+        </div>
+
+        <!-- footer: simple footer containing copyright -->
+        <div class="footer dark_background hero_secondary">
+            Copyright © The odin Project 2021
+        </div>
     </div>
 </body>
 </html>
