Add button to first-layer together with small styling improvements
Added Gap and flex improvements in .container

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <div class="container">
                 <h1 class="hero_main">This website is awesome</h1>
                 <sub class="hero_secondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</sub>
+                <button class="call_to_action">Sign up</button>
             </div>
             <img src="./images/canyon.jpg" alt="picture of canyon in grey">
         </div>
@@ -69,9 +70,9 @@
         <!-- fourth-layer: Call to action, message to sign up on the left side 
         with a button on the right side -->
         <div class="fourth-layer">
-            <h3 class="call_to_action_color">Call to action! It's time!</h3>
+            <h3 class="call_to_action">Call to action! It's time!</h3>
             <sub>Sign up four our product by clicking that button right over there!</sub>
-            <button class="call_to_action_color">Sign up</button>
+            <button class="call_to_action">Sign up</button>
         </div>
 
         <!-- footer: simple footer containing copyright -->
