Add css on second layer
Added basic flexbox on second layer, together with images.
used <figure> and <figcaption> to make relation of subtext with image easier.

--- a/index.html
+++ b/index.html
@@ -42,23 +42,26 @@
         <!-- second-layer: Some random information title, followed by 4 equally devided images,
         that each have a subtext -->
 
-        <div class=second-layer"">
+        <div class="second-layer">
             <h2 class="information_header_text">Some random information.</h2>
-
-            <img src="./images/" alt="SL-image 1">
-            <sub>this is some subtext under an illustration or image</sub>
-
-
-            <img src="./images/" alt="SL-image 2">
-            <sub>this is some subtext under an illustration or image</sub>
-
-
-            <img src="./images/" alt="SL-image 3">
-            <sub>this is some subtext under an illustration or image</sub>
-
-
-            <img src="./images/" alt="SL-image 4">
-            <sub>this is some subtext under an illustration or image</sub>
+            <div class="container">
+                <figure class="img1">
+                    <img src="./images/rowboat.jpg" alt="rowboat in illustration form">
+                    <figcaption>this is some subtext under an illustration or image</figcaption>
+                </figure>
+                <figure class="img2">
+                    <img src="./images/sailboat.jpg" alt="sailboat in illustration form">
+                    <figcaption>this is some subtext under an illustration or image</figcaption>
+                </figure>
+                <figure class="img3">
+                    <img src="./images/motorboat.jpg" alt="motorboat in illustration form">
+                    <figcaption>this is some subtext under an illustration or image</figcaption>
+                </figure>
+                <figure class="img4">
+                    <img src="./images/bigship.jpg" alt="big ship in illustration form">
+                    <figcaption>this is some subtext under an illustration or image</figcaption
+                </figure>
+            </div>
         </div>
 
         <!--third-layer: Contains an inspiring quote, centralised -->
