--- a/index.html
+++ b/index.html
@@ -66,8 +66,10 @@
 
         <!--third-layer: Contains an inspiring quote, centralised -->
         <div class="third-layer quote_background">
-            <p class="quote_text"><i>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</i></p>
-            <p class="quote_text name">-Thor, God of Thunder</p>
+            <div class="container">
+                <p class="quote_text"><i>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</i></p>
+                <p class="quote_name">-Thor, God of Thunder</p>
+            </div>
         </div>
 
         <!-- fourth-layer: Call to action, message to sign up on the left side 
