Add small fixes in margin, updated footer and images

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <div class="wrapper">
         <div class="header dark_background">
-            <img src="./images/header_logo.png" alt="Header logo of company">
+            <img src="./images/logo.png" alt="logo of company">
             <div class="pushblock"></div>
             <ul class="header-links hero_secondary">
                 <a href="">header link one</a>
@@ -36,7 +36,7 @@
                 <sub class="hero_secondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</sub>
                 <button class="call_to_action">Sign up</button>
             </div>
-            <img src="./images/canyon.jpg" alt="picture of canyon in grey">
+            <img src="./images/foto_sailboat.jpg" alt="picture of canyon in grey">
         </div>
 
         <!-- second-layer: Some random information title, followed by 4 equally devided images,
@@ -74,15 +74,17 @@
 
         <!-- fourth-layer: Call to action, message to sign up on the left side 
         with a button on the right side -->
-        <div class="fourth-layer">
-            <h3 class="call_to_action">Call to action! It's time!</h3>
-            <sub>Sign up four our product by clicking that button right over there!</sub>
+        <div class="fourth-layer call_to_action">
+            <div class="container">
+                <h3 class="call_to_action">Call to action! It's time!</h3>
+                <sub>Sign up four our product by clicking that button right over there!</sub>
+            </div>
             <button class="call_to_action">Sign up</button>
         </div>
 
         <!-- footer: simple footer containing copyright -->
         <div class="footer dark_background hero_secondary">
-            Copyright © The odin Project 2021
+            <p>Copyright © The odin Project 2021</p>
         </div>
     </div>
 </body>
