--- a/index.html
+++ b/index.html
@@ -16,27 +16,29 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="header dark_background">
-            <img src="./images/logo.png" alt="logo of company">
-            <div class="pushblock"></div>
-            <ul class="header-links hero_secondary">
-                <a href="">header link one</a>
-                <a href="">header link two</a>
-                <a href="">header link three</a>
-            </ul>
-        </div>
-
-        <!-- Content blocks devided in 4 pieces: -->
-
-        <!-- first-layer: first layer below header. Left side contains big a h1,
-        followed by smaller text and a button. Right side contains an image -->
-        <div class="first-layer dark_background">
-            <div class="container">
-                <h1 class="hero_main">This website is awesome</h1>
-                <sub class="hero_secondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</sub>
-                <button class="call_to_action">Sign up</button>
+        <div class="first_layer_wrapper dark_background">
+            <div class="header dark_background">
+                <img src="./images/simplistic_sailboat_logo.png" alt="logo of company">
+                <div class="pushblock"></div>
+                <ul class="header-links hero_secondary">
+                    <a href="">header link one</a>
+                    <a href="">header link two</a>
+                    <a href="">header link three</a>
+                </ul>
             </div>
-            <img src="./images/foto_sailboat.jpg" alt="picture of canyon in grey">
+
+            <!-- Content blocks devided in 4 pieces: -->
+
+            <!-- first-layer: first layer below header. Left side contains big a h1,
+            followed by smaller text and a button. Right side contains an image -->
+            <div class="first-layer dark_background">
+                <div class="container">
+                    <h1 class="hero_main">This website is awesome</h1>
+                    <sub class="hero_secondary">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</sub>
+                    <button class="call_to_action">Sign up</button>
+                </div>
+                <img src="./images/foto_sailboat.jpg" alt="picture of canyon in grey">
+            </div>
         </div>
 
         <!-- second-layer: Some random information title, followed by 4 equally devided images,
